--- a/IP.css
+++ b/IP.css
@@ -377,6 +377,37 @@ border-radius: 50%;
   position: relative;
   right: 20px;
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-  
-
+/* Responsive styles */
+@media screen and (max-width: 768px) {
+    .container1 {
+        flex-direction: column;
+        align-items: center;
+    }
+    nav {
+        margin-top: 20px;
+    }
+    .main-text {
+        text-align: center;
+    }
+    .banner {
+        flex-direction: column;
+        align-items: center;
+    }
+    .banner-text {
+        text-align: center;
+    }
+    .banner-2 {
+        text-align: center;
+    }
+    .faqs {
+        padding: 20px;
+    }
+    #section3 {
+        padding: 20px;
+    }
+    .footer {
+        text-align: center;
+    }
+}
