--- a/style.css
+++ b/style.css
@@ -25,11 +25,15 @@ header {
 }
 
 .right_bx1 img {
-    /* position: absolute; */
-     margin-left: 45px;
-     padding-left: 60px;
+    position: relative;
+    right:200px;
+     /* margin-left: 45px; */
+     /* padding-left: 0px; */
+     /* padding-right: 240px; */
+
+     
     /* transform: translate(-50%, -50%); */
-    max-width: 100%;
+    max-width: 200%;
     height: auto;
     /* z-index: -1; */
     /* opacity: 0.5; */
