--- a/IP.css
+++ b/IP.css
@@ -411,3 +411,55 @@ border-radius: 50%;
         text-align: center;
     }
 }
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+#joinUsButton{
+  font-size: xx-large;
+  width: 300px;
+  height: 50px;
+  color: white;
+  background-color: #9e7bc7;
+  position: relative;
+  top: 80px;
+  left: 50px;
+  cursor: pointer;
+  transition-duration: 1s;
+}
+#joinUsButton:hover{
+  /* box-shadow: #a474dc; */
+  border-radius: 30%;
+  border: 0 solid gray;
+}
